<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY" />

            <LinearLayout
                android:id="@+id/data_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:text="@string/detail_title_id"
                        android:textColor="@color/black"
                        android:textSize="18sp">

                    </TextView>

                    <TextView
                        android:id="@+id/id_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/default_txt"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/owner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:text="@string/detail_title_owner"
                        android:textColor="@color/black"
                        android:textSize="18sp">

                    </TextView>

                    <TextView
                        android:id="@+id/owner_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/default_txt"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/secret"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:text="@string/detail_title_secret"
                        android:textColor="@color/black"
                        android:textSize="18sp">

                    </TextView>

                    <TextView
                        android:id="@+id/secret_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/default_txt"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/server"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:text="@string/detail_title_server"
                        android:textColor="@color/black"
                        android:textSize="18sp">

                    </TextView>

                    <TextView
                        android:id="@+id/server_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/default_txt"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/farm"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:text="@string/detail_title_farm"
                        android:textColor="@color/black"
                        android:textSize="18sp">

                    </TextView>

                    <TextView
                        android:id="@+id/farm_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/default_txt"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:text="@string/detail_title_title"
                        android:textColor="@color/black"
                        android:textSize="18sp">

                    </TextView>

                    <TextView
                        android:id="@+id/title_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/default_txt"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ispublic"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:text="@string/detail_title_ispublic"
                        android:textColor="@color/black"
                        android:textSize="18sp">

                    </TextView>

                    <TextView
                        android:id="@+id/ispublic_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/default_txt"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/isfriend"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:text="@string/detail_title_isfriend"
                        android:textColor="@color/black"
                        android:textSize="18sp">

                    </TextView>

                    <TextView
                        android:id="@+id/isfriend_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/default_txt"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/isfamily"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:text="@string/detail_title_isfamily"
                        android:textColor="@color/black"
                        android:textSize="18sp">

                    </TextView>

                    <TextView
                        android:id="@+id/isfamily_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/default_txt"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/back_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_below="@+id/data_layout"

                android:backgroundTint="@color/orange"
                android:text="@string/default_back_btn"
                android:textColor="@color/black">
            </Button>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>